scaffolded movie pages

--- a/server/Movies/appsettings.json
+++ b/server/Movies/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=MvcMovieContext-5923d374-0d40-40fd-b220-215d8ba93903.db"
+  }
 }
